--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "com.unity.inputsystem": "1.14.2",
     "com.unity.render-pipelines.universal": "17.0.4",
-    "jp.keijiro.klutter-tools": "2.1.0",
+    "jp.keijiro.klutter-tools": "2.3.0",
+    "jp.keijiro.metamesh": "1.2.0",
+    "jp.keijiro.vfxgraphassets": "3.9.1",
+    "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.uielements": "1.0.0"
   },
   "scopedRegistries": [
