--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.render-pipelines.universal": "17.3.0",
     "jp.keijiro.klutter-tools": "2.3.0",
     "jp.keijiro.metamesh": "1.2.0",
+    "jp.keijiro.metatex": "1.0.5",
     "jp.keijiro.vfxgraphassets": "3.9.1",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.uielements": "1.0.0"
